grammars/hint/test/corpus/commands.txt
========
decorate
========
decorate
---
(command
  (decorate))

===
set
===
set
---
(command
  (set))

======
delete
======
delete
---
(command
  (delete))

====
load
====
load
---
(command
  (load))

======
unload
======
unload
---
(command
  (unload))

====
save
====
save
---
(command
  (save))

======
export
======
export
---
(command
  (export))

====
list
====
list
---
(command
  (list))

====
help
====
help
---
(command
  (help))
