grammars/hint/test/corpus/module.txt
==========
new module
==========
new module
---
(command
  (new
    (module)))

===============
new module woot
===============
new module woot
---
(command
  (new
    (module
      (name))))

==================
new module woot 1U
==================
new module woot 1U
---
(command
  (new
    (module
      (name)
      (height))))
